--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="/static/images/favicon.png" />
     </head>
     <body>
-        <div class="main"></div>
+        <div class="main mtm cf"></div>
         <!-- replace:<script src="/awi.min.js"></script> -->
         <script src="/jspm_packages/system.js"></script>
         <script src="/config.js"></script>
